# skills

./: .gitignore  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  MODULE.bazel  PULL_REQUEST_TEMPLATE.md  README.md  go.mod  go.sum
.github/ISSUE_TEMPLATE/: feature_request.md
cmd/mcp/: BUILD  main.go  main_test.go
internal/proto/: BUILD  test_schema.pb.go  test_schema.proto
internal/tools/: BUILD  compile.go  compile_test.go  config.go  config_test.go  coverage.go  evaluate.go  evaluate_test.go  input_schema.go  input_schema_test.go  prompt.go  prompt_test.go
internal/tools/testdata/: cloud_armor.json  request_headers_env.json  user_agent_mozilla.cel  user_agent_test.json
skills/cel-authoring/: SKILL.md
skills/cel-authoring/examples/: network_env.json  network_headers.cel  user_age_and_location.cel  user_env.json  user_roles.cel
skills/cel-authoring/references/: type_grammar_ebnf.txt
skills/cel-debugging/: SKILL.md
skills/cel-testing/: SKILL.md
skills/cel-testing/examples/: is_admin_env.json  is_admin_policy.cel  is_admin_test.json
