module(
    name = "cel-skills",
)

bazel_dep(
    name = "googleapis",
    version = "0.0.0-20241220-5e258e33.bcr.1",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "protobuf",
    version = "33.4",
    repo_name = "com_google_protobuf",
)
bazel_dep(name = "gazelle", version = "0.41.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_proto", version = "7.1.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_default_attributes(
    directives = [
        "gazelle:proto disable_global",
    ],
)
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_cel_go", "com_github_modelcontextprotocol_go_sdk", "org_golang_google_protobuf")
